# py_aoc

aoc2020/: README.md  day.py  hello.py  pyproject.toml
aoc2020/day/day01/: __init__.py
aoc2020/day/day02/: __init__.py
aoc2020/tests/day/day01/: main_test.py
aoc2020/tests/day/day02/: day02_test.py
